# VisualMem

./: .env.example  .gitignore  Quickstart.md  README-zh_CN.md  README.md  __init__.py  cli_main.py  config.py  demo_capture_storage.py  env.example  git checkout optimized_workflow  gui_backend_server.py  gui_main.py  main.py  query.py  requirements_linux_cuda.txt  requirements_macos.txt  test_capture.py
.claude/: dev_log.md
apps/: __init__.py
docs/: ENCODER_RETRIEVER_ARCHITECTURE.md  LANCEDB_INDEXES_AND_TIME_FILTERING.md
examples/: example_clip_retrieval.py  example_ocr_fallback.py  example_query_frame_diff.py  example_query_rewrite_time.py  example_query_selector.py  example_text_retrieval.py  example_vlm_api.py
gui/: __init__.py  main_window.py
logs/: cluster_labeling_events.jsonl
pro_gui/: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  vite.config.ts
screencap_rs/: Cargo.toml  README.md  build.sh  pyproject.toml
screencap_rs/src/: lib.rs
scripts/: backfill_activity_clusters.py  benchmark_compression.py  benchmark_ocr_strategies.py  benchmark_store_frame.py  cleanup_lancedb_versions.py  cleanup_missing_files.py  cleanup_solid_color_frames.py  convert_paths_to_absolute.py  daily_report.py  demo_bge_vl_screenshot.py  demo_ocr_compare.py  dump_no_ocr_cluster_frames.py  inspect_lancedb.py  lookup_frame_by_time.py  migrate_frame_ids_to_timestamp.py  migrate_to_video_chunks.py  rebuild_app_windows_from_sqlite.py  rebuild_db.py  rebuild_index.py  rebuild_ocr_regions.py  rebuild_sqlite.py  rebuild_text_index.py  setup_macos.sh  (+3 more)
(+108 files in other folders)
